--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -65,6 +65,20 @@ header div.right p {
   cursor: pointer;
 }
 
+div.bread {
+  /* display: flex; */
+  flex-direction: column;
+  /* width: 10%; */
+  display: none;
+}
+
+.bread span {
+  height: 3px;
+  width: 20%;
+  background-color: rgb(14, 13, 13);
+  margin: 2px 0;
+}
+
 section.widget {
   background: #17191e;
   display: flex;
