--- a/src/pages/homepage/index.css
+++ b/src/pages/homepage/index.css
@@ -2,6 +2,11 @@ section.main {
   position: relative;
   top: 128px;
   /* height: 200; */
+  /* width: 100%; */
+  /* left: 100%; */
+  right: 0;
+  /* background-color: #000; */
+  overflow: hidden;
 }
 
 section.banner {
@@ -53,6 +58,167 @@ section.banner .right img {
   width: 100%;
 }
 
+section.token-sale {
+  margin-top: 60px;
+  padding: 2% 2%;
+}
+
+section.token-sale > h1 {
+  text-align: center;
+  font-size: 26px;
+}
+
+section.token-sale > p {
+  text-align: center;
+}
+
+section.token-sale .main-table {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+section.token-sale .main-table > div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+}
+section.token-sale .main-table > div:nth-child(1) p {
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+}
+
+section.token-sale .main-table > div:nth-child(1) input {
+  padding: 10px 10px;
+  margin-bottom: 15px;
+  /* border: none; */
+  border-color: #f75e2f;
+  outline: none;
+  border-radius: 5px;
+}
+
+/* section.token-sale .main-table > div:nth-child(1) input:active {
+  border-style: none;
+} */
+
+section.token-sale .main-table > div:nth-child(1) button {
+  border-width: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1em;
+  fill: var(--e-global-color-primary);
+  color: var(--e-global-color-primary);
+  background-color: #f75e2f;
+  border-radius: 10px 10px 10px 10px;
+  padding: 18px 32px 16px;
+  color: #fff;
+  cursor: pointer;
+}
+
+section.token-sale .main-table > div:nth-child(2) {
+  background-color: #020202;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  border-radius: 10px;
+  padding: 10px 15px;
+  text-align: center;
+}
+
+.timing {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.timing .time {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+}
+
+.timing span {
+  font-size: 40px;
+}
+
+.time p:nth-child(1) {
+  font-size: 20px;
+}
+
+.time p:nth-child(2) {
+  font-size: 10px;
+}
+
+section.token-sale .main-table > div:nth-child(2) button {
+  border-width: 0;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1em;
+  fill: var(--e-global-color-primary);
+  color: var(--e-global-color-primary);
+  background-color: #f75e2f;
+  border-radius: 10px;
+  padding: 18px 32px;
+  color: #fff;
+  cursor: pointer;
+  width: 50%;
+  align-self: center;
+}
+
+section.token-sale .main-table > div:nth-child(2) > p {
+  font-size: 12px;
+}
+
+progress {
+}
+/* For Chrome or Safari */
+progress::-webkit-progress-bar {
+  background-color: #eeeeee;
+}
+
+progress::-webkit-progress-value {
+  background-color: #f75e2f !important;
+}
+
+/* For Firefox */
+progress {
+  background-color: #eee;
+}
+
+progress::-moz-progress-bar {
+  background-color: #f75e2f !important;
+}
+
+/* For IE10 */
+progress {
+  background-color: #eee;
+}
+
+progress {
+  background-color: #f75e2f;
+  height: 15px;
+  border-radius: 10px !important;
+  width: 100%;
+  margin-top: 10px;
+}
+
+section.token-sale .main-table > div:nth-child(3) {
+  width: 25%;
+}
+
+section.token-sale .main-table > div:nth-child(3) h4 {
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+}
+section.token-sale .main-table > div:nth-child(3) p {
+  font-size: 14px;
+  text-align: center;
+  font-weight: 700;
+}
 section.after-banner {
   margin: 100px 0;
   text-align: right;
