--- a/src/pages/homepage/index.css
+++ b/src/pages/homepage/index.css
@@ -126,7 +126,17 @@ section.token-sale .main-table > div:nth-child(2) {
   padding: 10px 15px;
   text-align: center;
 }
+section.token-sale .main-table div.coin-images {
+  /* display: flex; */
+  /* justify-content: space-between; */
 
+  /* width: 50%; */
+  /* display: none; */
+}
+div.coin-images img {
+  width: 5%;
+  margin: 0px 10px;
+}
 .timing {
   display: flex;
   justify-content: space-between;
@@ -207,6 +217,21 @@ progress {
 
 section.token-sale .main-table > div:nth-child(3) {
   width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+section.token-sale .main-table > div:nth-child(3) .coin-images {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+section.token-sale .main-table > div:nth-child(3) .coin-images img {
+  height: 40px;
+  width: 10%;
 }
 
 section.token-sale .main-table > div:nth-child(3) h4 {
@@ -219,6 +244,7 @@ section.token-sale .main-table > div:nth-child(3) p {
   text-align: center;
   font-weight: 700;
 }
+
 section.after-banner {
   margin: 100px 0;
   text-align: right;
